tests/suite/manifests/snippets-filter/invalid-duplicate-sf.yaml
apiVersion: gateway.bessystem.com/v1alpha1
kind: SnippetsFilter
metadata:
  name: duplicate-directive
spec:
  snippets:
    - context: main
      value: worker_processes auto;  # already present in the configuration
    - context: http
      value: aio on;
    - context: http.server
      value: auth_delay 10s;
    - context: http.server.location
      value: keepalive_time 10s;
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tea
spec:
  parentRefs:
    - name: gateway
      sectionName: http
  hostnames:
    - "cafe.example.com"
  rules:
    - matches:
        - path:
            type: Exact
            value: /tea
      filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.bessystem.com
            kind: SnippetsFilter
            name: duplicate-directive
      backendRefs:
        - name: tea
          port: 80
